<resources>
    <string name="app_name">Smart Calc</string>
    <string name="reminder">test</string>
    <string name="done">test2</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="affichageText" />
    <string name="affichageText2" />
    <string name="affichageText3" />
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="_validate">Enter</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">×</string>
    <string name="_divide">÷</string>
    <string name="_AC">AC</string>
    <string name="_modulo">%</string>
    <string name="_back">⌫</string>
    <string name="menu1">Menu</string>
    <string name="option1">Scores</string>
    <string name="onCreateMessage">Welcome to Smart Calc !</string>
    <string name="onDestroyMessage">Good bye !</string>
    <string name="onPauseMessage">Smart Calc is on pause</string>
    <string name="onRestartMessage">Smart Calc just resumed</string>
    <string name="Calc">Classic Calc</string>
    <string name="MentalMath">Mental Math</string>
    <string name="CalcHistory">Calc History</string>
    <string name="textview">TextView</string>
    <string name="ERROR_DIVIDE_ZERO">Division par zéro impossible</string>
    <string name="LIFE">Life : </string>
    <string name="SCORE">Score : </string>
    <string name="ScoreValue"> </string>
    <string name="hint">James</string>
    <string name="save">Confirm and save !</string>
    <string name="Leaderboard">Leaderboard Top 10 :</string>
</resources>