<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <!--Touche 1 du clavier-->
    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button6"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/_1" />

    <!--Touche 2 du clavier-->
    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@id/button1"
        android:layout_toEndOf="@+id/button1"
        android:text="@string/_2" />

    <!--Touche 3 du clavier-->
    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@id/button1"
        android:layout_toEndOf="@+id/button2"
        android:text="@string/_3" />

    <!--Touche 4 du clavier-->
    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/button7"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/_4" />

    <!--Touche 5 du clavier-->
    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@id/button4"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/_5" />

    <!--Touche 6 du clavier-->
    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@id/button4"
        android:layout_toEndOf="@+id/button5"
        android:text="@string/_6" />

    <!--Touche 7 du clavier-->
    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/_7" />

    <!--Touche 8 du clavier-->
    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@id/button7"
        android:layout_toEndOf="@+id/button7"
        android:text="@string/_8" />

    <!--Touche 9 du clavier-->
    <Button
        android:id="@+id/button9"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@id/button7"
        android:layout_toEndOf="@+id/button8"
        android:text="@string/_9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/affichageText" />

</RelativeLayout>